--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -9715,9 +9715,8 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 .masthead .masthead-avatar {
-  height: 1200px;
-  width: 2100px;
-  
+  max-width: 1800;
+  height: 800px;
 }
 
 @media (min-width: 992px) {
