--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -66,7 +66,7 @@ body {
   line-height: 1.5;
   color: #212529;
   text-align: left;
-  background-image: url("img/Sherlock Holmes.jpg");
+  background-image: url("sherlock/img/Sherlock Holmes.jpg");
   background-color: #fff;
 }
 
